# BovaPlayer

./: .gitignore  ACCOUNT_PAGE_USAGE_FIX.md  ANDROID_SMB_SUMMARY.md  AUTH_UI_UPDATE.md  BUFFERING_INDICATOR_ADDED.md  BUILD.md  BUILDS_README.md  BUILD_SUMMARY.md  BUILD_TAG_GUIDE.md  BUILD_WINDOWS.bat  CLOUD_SYNC_PLAN.md  CLOUD_SYNC_WEEK1_COMPLETE.md  CLOUD_SYNC_WEEK1_PROGRESS.md  DESIGN_GUIDE.md  DEVICE_REGISTRATION_ADDED.md  EMBY_UI_IMPROVEMENTS.md  EMBY_使用说明.md  FLUTTER_INSTALL_GUIDE.md  HOMEBREW_MPV_SETUP.md  HOMEBREW_MPV_SETUP_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  MEDIA_KIT_SETUP.md  MEDIA_KIT_TRUEHD_ISSUE.md  MOBILE_ADAPTATION_GUIDE.md  MPV_ANDROID_INTEGRATION.md  MPV_PLAYER_IMPROVEMENTS.md  PASSWORD_ENCRYPTION_UPDATE.md  PLAN.md  PLAYBACK_OPTIMIZATION_SUMMARY.md  QUICK_BUILD_GUIDE.txt  QUICK_START_GUIDE.md  README.md  REFRESH_DEBUG_GUIDE.md  REGISTRATION_FIX_GUIDE.md  RELEASE_NOTES.md  ROADMAP.md  SANDBOX_FIX_SUMMARY.md  SEEK_OPTIMIZATION_EXPLANATION.md  SMB_FTP_PROGRESS.md  SUPABASE_CONFIGURED.md  (+27 more)
.continue/agents/: new-config-1.yaml
.github/workflows/: build.yml
.kiro/skills/: adapt  frontend-design  optimize  polish
.kiro/specs/cloud-sync/: account-system-design.md  implementation-plan.md  requirements.md
.kiro/specs/smb-frp-support/: requirements.md
.kiro/specs/smb-ftp-implementation/: tech-design.md
.kiro/steering/: adapt-skill.md  frontend-design-skill.md  optimize-skill.md  polish-skill.md
core/: Cargo.toml  bova_emby_config.json  test_probe.rs
core/crates/bova-cli/: Cargo.toml
core/crates/bova-cli/src/: main.rs
core/crates/bova-core/: Cargo.toml
core/crates/bova-core/src/: lib.rs
core/crates/bova-ffi/: Cargo.toml
core/crates/bova-ffi/src/: lib.rs
core/crates/bova-gui/: Cargo.toml
core/crates/bova-gui/src/: emby.rs  main.rs
core/crates/bova-playback/: Cargo.toml  build.rs
core/crates/bova-playback/src/: lib.rs  mpv_player.rs
core/crates/bova-probe/: Cargo.toml
core/crates/bova-probe/src/: lib.rs
docs/: design-system.md  development.md  troubleshooting.md
scripts/: build_local.sh  run_macos.sh  update_icons.sh  verify_android_smb.sh
services/payment-api/: .env.example  Dockerfile  deploy.sh  docker-compose.yml  package-lock.json  package.json  run-local.sh
services/payment-api/src/: index.ts
supabase/functions/_shared/: payment.ts
supabase/functions/payment-create/: index.ts
supabase/functions/payment-notify-yipay/: index.ts
supabase/functions/payment-return-yipay/: index.ts
supabase/functions/payment-status/: index.ts
ui/bova_native/: pubspec.yaml
ui/bova_native/lib/: bova_native.dart  bova_native_plugin.dart
ui/flutter_app/: .env.example  .gitignore  ANDROID_DANMAKU_INTEGRATION.md  ANDROID_FTP_STATUS.md  ANDROID_SMB_COMPLETION.md  ANDROID_SMB_EXAMPLE.md  ANDROID_SMB_TEST.md  DANMAKU_COMPLETE.md  DANMAKU_INTEGRATION.md  DANMAKU_LOGS_CLEANED.md  DANMAKU_MATCHING_LOGIC.md  DANMAKU_TITLE_OPTIMIZATION.md  ENCRYPTED_SYNC_GUIDE.md  ICON_GUIDE.md  README.md  SECURITY_ANALYSIS.md  SUPABASE_SETUP_GUIDE.md  copy_native_libs.sh  flutter_launcher_icons.yaml  pubspec.yaml  run_desktop.sh  setup_cloud_sync.sh  supabase_redemption_codes.sql  test_encryption.dart  test_stack.dart  update_icon.sh  verify_android_smb.sh
ui/flutter_app/android/: build.gradle.kts  gradle.properties
ui/flutter_app/assets/: ICON_README.md
ui/flutter_app/lib/: better_player_page.dart  better_player_page_old.dart  emby_page.dart  enhanced_player.dart  exoplayer_page.dart  libbova_ffi.dylib  main.dart  main_simple.dart  mdk_player_page.dart  media_kit_player_page.dart  media_library_page.dart  mpv_android_player_page.dart  mpv_player.dart  mpv_player_page.dart  mpv_player_with_controls.dart  native_bridge.dart  network_browser_page.dart  player_screen.dart  player_screen_desktop.dart  player_screen_mobile.dart  player_screen_web.dart  player_screen_web_stub.dart  simple_media_kit_player.dart  unified_player_page.dart  video_player_page.dart
ui/flutter_app/macos/: Podfile  libbova_ffi.dylib
ui/flutter_app/patches/: media_kit_video_android_fix.patch
ui/flutter_app/test/: encryption_test.dart  widget_test.dart
ui/flutter_app/web/: index.html  (+1 more)
(+168 files in other folders)
