[workspace]
members = [
  "crates/bova-core",
  "crates/bova-ffi",
  "crates/bova-cli",
  "crates/bova-probe",
  "crates/bova-gui",
  "crates/bova-playback",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.0.1"

[workspace.dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
anyhow = "1"
log = "0.4"
